[package]
name = "node-bench"
version = "0.9.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node integration benchmarks."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-bytes = "4.1"
clap = { version = "4.0.9", features = ["derive"] }
log = "0.4.17"
node-primitives = { version = "2.0.0", path = "../primitives" }
node-testing = { version = "3.0.0-dev", path = "../testing" }
kitchensink-runtime = { version = "3.0.0-dev", path = "../runtime" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sp-state-machine = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
serde = "1.0.136"
serde_json = "1.0.85"
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
kvdb = "0.13.0"
kvdb-rocksdb = "0.17.0"
sp-trie = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sp-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sp-tracing = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
hash-db = "0.15.2"
tempfile = "3.1.0"
fs_extra = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
lazy_static = "1.4.0"
parity-db = "0.4.3"
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
futures = { version = "0.3.21", features = ["thread-pool"] }
