[package]
name = "node-rpc"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node rpc methods."
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
node-primitives = { version = "2.0.0", path = "../primitives" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
mmr-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-consensus-babe-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-consensus-epochs = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-consensus-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-consensus-grandpa-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-rpc-spec-v2 = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
substrate-state-trie-migration-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
