[package]
name = "node-testing"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test utilities for Substrate node."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
fs_extra = "1"
futures = "0.3.21"
log = "0.4.17"
tempfile = "3.1.0"
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
node-executor = { version = "3.0.0-dev", path = "../executor" }
node-primitives = { version = "2.0.0", path = "../primitives" }
thxnet-runtime = { version = "3.0.0-dev", path = "../runtime" }
pallet-assets = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
pallet-asset-tx-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-client-db = { version = "0.10.0-dev", features = ["rocksdb"], git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sc-service = { version = "0.10.0-dev", features = [
	"test-helpers",
	"rocksdb",
], git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
sp-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
substrate-test-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
